crates/puffin-cli/tests/snapshots/pip_sync__missing_venv.snap
---
source: crates/puffin-cli/tests/pip_sync.rs
info:
  program: puffin
  args:
    - pip-sync
    - requirements.txt
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpvJQh45/.venv
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: failed to open file `requirements.txt`
  Caused by: No such file or directory (os error 2)

